--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^3.0.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
+    "expo-constants": "^14.2.1",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-react-native": "^1.7.10",
+    "yup": "^1.2.0",
+    "@react-native-picker/picker": "2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.2",
     "typescript": "^4.9.4"
   },
   "private": true
