--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-picker/picker": "2.4.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
     "expo-constants": "^14.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-permissions": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.2",
     "nativewind": "^2.0.11",
@@ -23,7 +26,7 @@
     "tailwindcss": "^3.3.2",
     "tailwindcss-react-native": "^1.7.10",
     "yup": "^1.2.0",
-    "@react-native-picker/picker": "2.4.8"
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
