--- a/package.json
+++ b/package.json
@@ -5,39 +5,39 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
     "@react-native-community/hooks": "^3.0.0",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "expo": "~48.0.18",
-    "expo-constants": "^14.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-location": "~15.1.1",
-    "expo-permissions": "~14.1.1",
-    "expo-status-bar": "~1.4.4",
+    "apisauce": "^3.0.1",
+    "expo": "~49.0.5",
+    "expo-constants": "^14.4.2",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-permissions": "~14.2.1",
+    "expo-status-bar": "~1.6.0",
     "formik": "^2.4.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-react-native": "^1.7.10",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.22.9",
+    "@types/react": "~18.2.17",
     "@types/react-native": "^0.72.2",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.6"
   },
   "private": true
 }
