Offline Support, Authentication and Authorization

--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#fc5c65"
     },
     "assetBundlePatterns": [
       "**/*"
