--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -16,26 +17,31 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "apisauce": "^3.0.1",
-    "expo": "~49.0.5",
+    "expo": "~49.0.6",
     "expo-constants": "^14.4.2",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.1.0",
     "formik": "^2.4.2",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-react-native": "^1.7.10",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@types/react": "~18.2.17",
+    "@types/react": "~18.2.18",
     "@types/react-native": "^0.72.2",
     "typescript": "^5.1.6"
   },
